# ISEC

am2_tp_3/: Autores_App.mlapp  MN_PVI_GUI_App.mlapp  NEuler.m  NEulerM.m  NRK2.m  NRK3.m  NRK4.m  mODE45.m  resultado.xlsx
am2_tp_3/Relatorio Latex/: bibliografia.bib  main.tex
am2_tp_4/: appAutores.mlapp  appMaquina01MNSED.mlapp  resultado.xlsx
am2_tp_5/: appMaquina03CDI.mlapp
cr_tp/: RelatorioCR.docx  results.xlsx  xA.m  xB.m  xC.m  xD.m  xE.mlapp
cr_tp/filesui/: help.html
iia_tp_1/: README.md  modeloBase.nlogo  modeloMelhorado.nlogo  modeloMelhoradov2.nlogo  modeloMelhoradov3.nlogo  modeloMelhoradov4_FINAL.nlogo  relatorio.docx
iia_tp_2/: Coin Change Solver.pptx  tests.xlsx
ls_tp/: package.json  relatorio.docx
ls_tp/src/: App.js
poo_tp/: Buffer.cpp  Buffer.h  CMakeLists.txt  Combate.cpp  Combate.h  Interface.cpp  Interface.h  Mapa.cpp  Mapa.h  Simulacao.cpp  Simulacao.h  main.cpp
poo_tp/DCaravana/: Barbaro.cpp  Barbaro.h  Caravana.cpp  Caravana.h  Comercio.cpp  Comercio.h  Militar.cpp  Militar.h  Secreta.cpp  Secreta.h
poo_tp/DItem/: Item.cpp  Item.h  Jaula.cpp  Jaula.h  Mina.cpp  Mina.h  Pandora.cpp  Pandora.h  Surpresa.cpp  Surpresa.h  Tesouro.cpp  Tesouro.h
poo_tp/DZona/: Cidade.cpp  Cidade.h  Montanha.cpp  Montanha.h  Tempestade.cpp  Tempestade.h  Zona.cpp  Zona.h
prog_tp/: CMakeLists.txt  jogofunc.c  jogofunc.h  list.c  list.h  main.c  matdin.c  matdin.h  matdin3d.c  matdin3d.h  utils.c  utils.h
so_tp/: feed.c  feed.h  makefile  manager.c  manager.h  utils.h
tweb_tp/: estilos.css  estilos.css.map  estilos.sass  index.html  logica.js
(+447 files in other folders)
